sample2/aks-deployment/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-ingress
    chart: nginx-ingress-0.22.0
    component: controller
    heritage: Tiller
    release: devicemanager-nginx
  name: devicemanager-nginx-nginx-ingress-controller
  selfLink: /api/v1/namespaces/default/services/devicemanager-nginx-nginx-ingress-controller
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 13.80.141.109
  ports:
  - name: http
    nodePort: 30781
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 32026
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: nginx-ingress
    component: controller
    release: devicemanager-nginx
  sessionAffinity: None
  type: LoadBalancer
