sample2/aks-deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devicemanager-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: devicemanager-api-service
          servicePort: 8080
